--- a/main.bib
+++ b/main.bib
@@ -7,6 +7,7 @@
   title = {{The Cathedral and the Bazaar}},
   volume = {12},
   year = {1999},
+  doi = {10.1007/s12130-999-1026-0}
 }
 
 @book{fogel2005producing,
@@ -16,7 +17,7 @@
   year = {2005},
 }
 
-@article{pope2014,
+@misc{pope2014,
   author = {Winfield, Nicole},
   journal = {{New York Post}},
   month = {feb},
@@ -33,6 +34,7 @@
   title = {{The Influence of the Avatar on Online Perceptions of Anthropomorphism, Androgyny, Credibility, Homophily, and Attraction}},
   volume = {11},
   year = {2005},
+  doi = {10.1111/j.1083-6101.2006.tb00308.x}
 }
 
 @misc{laurentsyeva2019friends,
@@ -41,7 +43,7 @@
   year = {2019},
 }
 
-@inproceedings{fackler2020gravity,
+@misc{fackler2020gravity,
   author = {Fackler, Thomas and Laurentsyeva, Nadzeya},
   booktitle = {{Proceedings of the CESifo Forum}},
   pages = {15--20},
@@ -56,6 +58,7 @@
   pages = {144--154},
   title = {{Let's Talk About It: Evaluating Contributions Through Discussion in GitHub}},
   year = {2014},
+  doi= {10.1145/2635868.2635882}
 }
 
 @article{terrell2017gender,
@@ -66,6 +69,7 @@
   title = {{Gender Differences and Bias in Open Source: Pull Request Acceptance of Women Versus Men}},
   volume = {3},
   year = {2017},
+  doi = {10.7717/peerj-cs.111}
 }
 
 @inproceedings{imtiaz2019investigating,
@@ -75,6 +79,7 @@
   pages = {700--711},
   title = {{Investigating the Effects of Gender Bias on GitHub}},
   year = {2019},
+  doi = {10.1109/ICSE.2019.00079}
 }
 
 @article{nadri2021insights,
@@ -85,6 +90,7 @@
   title = {{Insights into Nonmerged Pull Requests in GitHub: Is There Evidence of Bias Based on Perceptible Race?}},
   volume = {38},
   year = {2021},
+  doi = {10.1109/MS.2020.3036758}
 }
 
 @inproceedings{egelman2020predicting,
@@ -93,6 +99,7 @@
   pages = {174--185},
   title = {{Predicting Developers' Negative Feelings About Code Review}},
   year = {2020},
+  doi = {10.1145/3377811.3380414}
 }
 
 @inproceedings{middleton2018contributions,
@@ -101,6 +108,7 @@
   pages = {403--413},
   title = {{Which Contributions Predict Whether Developers Are Accepted into Github Teams}},
   year = {2018},
+  doi = {10.1145/3196398.3196429}
 }
 
 @inproceedings{miller2022did,
@@ -109,6 +117,7 @@
   pages = {710--722},
   title = {{``Did You Miss My Comment or What?'' Understanding Toxicity in Open Source Discussions}},
   year = {2022},
+  doi = {10.1145/3510003.3510111}
 }
 
 @article{lu2022emojis,
@@ -118,6 +127,7 @@
   title = {{Emojis Predict Dropouts of Remote Workers: An Empirical Study of Emoji Usage on GitHub}},
   volume = {17},
   year = {2022},
+  doi = {10.1371/journal.pone.0261262}
 }
 
 @article{mytton2016,
@@ -134,6 +144,7 @@
   pages = {57--60},
   title = {{Stress and Burnout in Open Source: Toward Finding, Understanding, and Mitigating Unhealthy Interactions}},
   year = {2020},
+  doi = {10.1145/3377816.3381732}
 }
 
 @article{li2021code,
@@ -145,6 +156,7 @@
   title = {{Code of Conduct Conversations in Open Source Software Projects on Github}},
   volume = {5},
   year = {2021},
+  doi = {10.1145/3449093}
 }
 
 @inproceedings{jamieson2023predicting,
@@ -154,6 +166,7 @@
   pages = {667--679},
   title = {{Predicting Open Source Contributor Turnover From Value-Related Discussions: An Analysis of GitHub Issues}},
   year = {2023},
+  doi = {10.1145/3597503.3623340}
 }
 
 @article{ferreira2021shut,
@@ -165,9 +178,10 @@
   title = {{The ``Shut the F** K Up'' Phenomenon: Characterizing Incivility in Open Source Code Review Discussions}},
   volume = {5},
   year = {2021},
+  doi = {10.1145/3479497}
 }
 
-@article{warschauer1995comparing,
+@misc{warschauer1995comparing,
   author = {Warschauer, Mark},
   journal = {{CALICO Journal}},
   pages = {7--26},
@@ -345,6 +359,7 @@
   pages = {181--190},
   title = {{Modern Code Review: A Case Study at Google}},
   year = {2018},
+  doi = {10.1145/3183519.3183525}
 }
 
 @inproceedings{bosu2015characteristics,
@@ -354,6 +369,7 @@
   pages = {146--156},
   title = {{Characteristics of Useful Code Reviews: An Empirical Study at Microsoft}},
   year = {2015},
+  doi = {10.1109/MSR.2015.21}
 }
 
 @inproceedings{czerwonka2015code,
@@ -373,6 +389,7 @@
   pages = {101--110},
   title = {{Will My Patch Make It? And How Fast? Case Study on the Linux Kernel}},
   year = {2013},
+  doi = {10.1109/MSR.2013.6624016}
 }
 
 @article{ackerman1989software,
@@ -384,6 +401,7 @@
   title = {{Software Inspections: An Effective Verification Process}},
   volume = {6},
   year = {1989},
+  doi = {10.1109/52.28121}
 }
 
 @article{fagan1976design,
@@ -391,7 +409,10 @@
   journal = {{IBM Systems Journal}},
   number = {3},
   title = {{Design and Code Inspections to Reduce Errors in Program Development}},
-  year = {1976},
+  year = {1999},
+  pages = {258--287},
+  volume = {38},
+  doi = {10.1147/sj.382.0258}
 }
 
 @inproceedings{bacchelli2013expectations,
@@ -513,6 +534,7 @@
   title = {{{\scshape GitHub Actions}: The Impact on the Pull Request Process}},
   volume = {28},
   year = {2023},
+  doi = {10.1007/s10664-023-10369-w}
 }
 
 @misc{fowler2006,
@@ -538,6 +560,7 @@
   pages = {202--212},
   title = {{Convergent Contemporary Software Peer Review Practices}},
   year = {2013},
+  doi = {10.1145/2491411.2491444}
 }
 
 @article{rigby2012contemporary,
@@ -549,6 +572,7 @@
   title = {{Contemporary Peer Review in Action: Lessons From Open Source Development}},
   volume = {29},
   year = {2012},
+  doi = {10.1109/MS.2012.24}
 }
 
 @inproceedings{yu2015wait,
@@ -558,6 +582,7 @@
   pages = {367--371},
   title = {{Wait for It: Determinants of Pull Request Evaluation Latency on GitHub}},
   year = {2015},
+  doi = {10.1109/MSR.2015.42}
 }
 
 @article{engelfriet2009choosing,
@@ -596,7 +621,7 @@
   year = {2014},
 }
 
-@article{lin2006open,
+@misc{lin2006open,
   author = {Lin, Yi-Hsuan and Ko, Tung-Mei and Chuang, Tyng-Ruey and Lin, Kwei-Jay and others},
   journal = {{Journal of Information Science and Engineering}},
   number = {1},
