--- a/main.bib
+++ b/main.bib
@@ -196,6 +196,7 @@
   pages = {40--49},
   title = {{How Are Communication Channels on GitHub Presented to Their Intended Audience? --- A Thematic Analysis}},
   year = {2022},
+  doi = {10.1145/3530019.3530024}
 }
 
 @book{hetzel1993complete,
@@ -227,6 +228,7 @@
   pages = {308--318},
   title = {{What Makes a Good Bug Report?}},
   year = {2008},
+  doi = {10.1145/1453101.1453146}
 }
 
 @misc{bugayenko2018blog0206,
@@ -254,6 +256,7 @@
   pages = {392--401},
   title = {{It's Not a Bug, It's a Feature: How Misclassification Impacts Bug Prediction}},
   year = {2013},
+  doi = {10.1109/ICSE.2013.6606585}
 }
 
 @misc{bugayenko2022blog0329,
@@ -301,7 +304,7 @@
   year = {2016},
 }
 
-@inproceedings{reis2002overview,
+@misc{reis2002overview,
   author = {Reis, Christian Robottom and de Mattos Fortes, Renata Pontin},
   booktitle = {{Proceedings of the Open Source Software Development Workshop}},
   title = {{An Overview of the Software Engineering Process and Tools in the Mozilla Project}},
@@ -315,6 +318,7 @@
   pages = {361--370},
   title = {{Who Should Fix This Bug?}},
   year = {2006},
+  doi = {10.1145/1134285.1134336}
 }
 
 @inproceedings{dal2016makes,
@@ -324,6 +328,7 @@
   pages = {164--174},
   title = {{What Makes a Satisficing Bug Report?}},
   year = {2016},
+  doi = {10.1109/QRS.2016.28}
 }
 
 @misc{bugayenko2023blog0725,
