--- a/main.bib
+++ b/main.bib
@@ -385,6 +385,7 @@
   title = {{Code Reviews Do Not Find Bugs: How the Current Code Review Best Practice Slows Us Down}},
   volume = {2},
   year = {2015},
+  doi = {10.1109/ICSE.2015.131}
 }
 
 @inproceedings{jiang2013will,
@@ -427,6 +428,7 @@
   pages = {712--721},
   title = {{Expectations, Outcomes, and Challenges of Modern Code Review}},
   year = {2013},
+  doi = {10.1109/ICSE.2013.6606617}
 }
 
 @inproceedings{sutherland2009can,
@@ -436,6 +438,7 @@
   pages = {259--262},
   title = {{Can Peer Code Reviews Be Exploited for Later Information Needs?}},
   year = {2009},
+  doi = {10.1109/ICSE-COMPANION.2009.5070996}
 }
 
 @article{ortu2020you,
@@ -446,9 +449,10 @@
   title = {{How Do You Propose Your Code Changes? Empirical Analysis of Affect Metrics of Pull Requests on GitHub}},
   volume = {8},
   year = {2020},
+  doi = {10.1109/ACCESS.2020.3002663}
 }
 
-@inproceedings{freira2018analyzing,
+@misc{freira2018analyzing,
   author = {Freira, Mateus and Caetano, Josemar and Oliveira, Johnatan and Marques-Neto, Humberto},
   booktitle = {{Proceedings of the International Conference on Software Engineering \& Knowledge Engineering}},
   title = {{Analyzing the Impact of Feedback in GitHub on the Software Developer's Mood}},
@@ -464,6 +468,7 @@
   title = {{Effects of Personality Traits on Pull Request Acceptance}},
   volume = {47},
   year = {2019},
+  doi = {10.1109/TSE.2019.2960357}
 }
 
 @inproceedings{ford2019beyond,
@@ -473,6 +478,7 @@
   pages = {51--60},
   title = {{Beyond the Code Itself: How Programmers \emph{Really} Look at Pull Requests}},
   year = {2019},
+  doi = {10.1109/ICSE-SEIS.2019.00014}
 }
 
 @inproceedings{liu2019automatic,
@@ -482,6 +488,7 @@
   pages = {176--188},
   title = {{Automatic Generation of Pull Request Descriptions}},
   year = {2019},
+  doi = {10.1109/ase.2019.00026}
 }
 
 @misc{bugayenko2022blog0804,
