--- a/main.bib
+++ b/main.bib
@@ -19,7 +19,7 @@
 
 @misc{pope2014,
   author = {Winfield, Nicole},
-  journal = {{New York Post}},
+  publisher = {{New York Post}},
   month = {feb},
   title = {{Pope's Advice to Couples: Say `Please, Thanks and Sorry'}},
   year = {2014},
@@ -45,7 +45,7 @@
 
 @misc{fackler2020gravity,
   author = {Fackler, Thomas and Laurentsyeva, Nadzeya},
-  booktitle = {{Proceedings of the CESifo Forum}},
+  publisher = {{CESifo Forum}},
   pages = {15--20},
   title = {{Gravity in Online Collaborations: Evidence From Github}},
   volume = {21},
@@ -68,6 +68,7 @@
   publisher = {PeerJ Inc},
   title = {{Gender Differences and Bias in Open Source: Pull Request Acceptance of Women Versus Men}},
   volume = {3},
+  number = {1},
   year = {2017},
   doi = {10.7717/peerj-cs.111}
 }
@@ -130,7 +131,7 @@
   doi = {10.1371/journal.pone.0261262}
 }
 
-@article{mytton2016,
+@misc{mytton2016,
   author = {Mytton, David},
   journal = {{InfoWorld}},
   month = {feb},
@@ -183,9 +184,8 @@
 
 @misc{warschauer1995comparing,
   author = {Warschauer, Mark},
-  journal = {{CALICO Journal}},
+  publisher = {{CALICO Journal}},
   pages = {7--26},
-  publisher = {JSTOR},
   title = {{Comparing Face-to-Face and Electronic Discussion in the Second Language Classroom}},
   year = {1995},
 }
@@ -306,7 +306,7 @@
 
 @misc{reis2002overview,
   author = {Reis, Christian Robottom and de Mattos Fortes, Renata Pontin},
-  booktitle = {{Proceedings of the Open Source Software Development Workshop}},
+  publisher = {{Open Source Software Development Workshop}},
   title = {{An Overview of the Software Engineering Process and Tools in the Mozilla Project}},
   volume = {8},
   year = {2002},
@@ -448,13 +448,14 @@
   publisher = {IEEE},
   title = {{How Do You Propose Your Code Changes? Empirical Analysis of Affect Metrics of Pull Requests on GitHub}},
   volume = {8},
+  number = {1},
   year = {2020},
   doi = {10.1109/ACCESS.2020.3002663}
 }
 
 @misc{freira2018analyzing,
   author = {Freira, Mateus and Caetano, Josemar and Oliveira, Johnatan and Marques-Neto, Humberto},
-  booktitle = {{Proceedings of the International Conference on Software Engineering \& Knowledge Engineering}},
+  publisher = {{International Conference on Software Engineering \& Knowledge Engineering}},
   title = {{Analyzing the Impact of Feedback in GitHub on the Software Developer's Mood}},
   year = {2018},
 }
@@ -527,11 +528,10 @@
   year = {2015},
 }
 
-@article{lenarduzzi2021does,
+@misc{lenarduzzi2021does,
   author = {Lenarduzzi, Valentina and Nikkola, Vili and Saarim{\"a}ki, Nyyti and Taibi, Davide},
-  journal = {{Journal of Systems and Software}},
+  publisher = {{Journal of Systems and Software}},
   pages = {110806},
-  publisher = {Elsevier},
   title = {{Does Code Quality Affect Pull Request Acceptance? An Empirical Study}},
   volume = {171},
   year = {2021},
@@ -635,10 +635,9 @@
 
 @misc{lin2006open,
   author = {Lin, Yi-Hsuan and Ko, Tung-Mei and Chuang, Tyng-Ruey and Lin, Kwei-Jay and others},
-  journal = {{Journal of Information Science and Engineering}},
+  publisher = {{Journal of Information Science and Engineering}},
   number = {1},
   pages = {1--17},
-  publisher = {Citeseer},
   title = {{Open Source Licenses and the Creative Commons Framework: License Selection and Comparison}},
   volume = {22},
   year = {2006},
