--- a/main.bib
+++ b/main.bib
@@ -133,7 +133,7 @@
 
 @misc{mytton2016,
   author = {Mytton, David},
-  journal = {{InfoWorld}},
+  publisher = {{InfoWorld}},
   month = {feb},
   title = {{What's the Real Reason Microsoft and Google Are Releasing Open Source?}},
   year = {2016},
