--- a/main.bib
+++ b/main.bib
@@ -946,6 +946,7 @@
   publisher = {The Pragmatic Bookshelf},
   title = {{Release It!: Design and Deploy Production-Ready Software}},
   year = {2007},
+  doi = {10.5555/1200767}
 }
 
 @book{mcconnell1998,
