--- a/osbp.sty
+++ b/osbp.sty
@@ -103,7 +103,7 @@
   \begin{multicols}{2}
   \setlength{\bibsep}{.2em}
   \renewcommand{\bibfont}{\scriptsize}
-  \bibliography{../main}
+  \bibliography{../bibliography/main}
   \end{multicols}
 }
 
